# bem

./: .gdb_history  Array.h  ComplexPair.h  ComplexVector3.h  ComplexVector3Pair.cpp  ComplexVector3Pair.h  ConjugateGradient.h  DenseMatrix.cpp  DenseMatrix.h  Dielectric.h  Edge.h  FaceIndex.cpp  Field.h  Flux.cpp  Flux.h  FrequencySweep.h  FunctionArgs.h  GenTriangleQuadGauss.cpp  GreensFunction.cpp  GreensFunction.h  HMatrix.h  HydrodynamicDielectric.cpp  Impedance.cpp  Impedance.h  ImpedanceNew.bak  ImpedanceNew.cpp  ImpedanceNew.h  ImpedanceOld.cpp  Interaction.cpp  Makefile  Makefile.am  Makefile.in  MathUtils.cpp  MathUtils.h  Matrix.h  MatrixBase.h  MatrixOperations.cpp  Nonlocal.cpp  Nonlocal.h  Options.cpp  (+107 more)
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: notes
examples/: a.txt  alumina.x3d  alumina2.x3d  blob.x3d  body1.x3d  body2.x3d  cross.x3d  cross2.x3d  cube1.x3d  cube4.x3d  cube768.x3d  cube8.x3d  cuboid.x3d  cuboid480.x3d  cylinder.x3d  freqs.txt  hemi.x3d  output  plane.x3d  plate.x3d  plate_left.geo  plate_left.msh  plate_right.geo  plate_right.msh  sphere.x3d  tip.x3d
src/: #Makefile#  #Options.h#  #SiN.cpp#  AnalyticIntegrals.cpp  AnalyticIntegrals.h  ConjugateGradient.h  Edge.h  FaceIndex.cpp  FaceIndex.h  Field.cpp  FileUtils.h  Flux.cpp  Flux.h  FrequencySweep.cpp  FrequencySweep.h  GreensFunction.cpp  GreensFunction.h  HeatTransfer.cpp  HeatTransfer.h  HydrodynamicDielectric.h  Impedance.cpp  Impedance.h  ImpedanceNew.cpp  ImpedanceNew.h  ImpedanceOld.h  Interaction.h  Makefile.am  Makefile.in  Nonlocal.cpp  Options.cpp  Options.h  Output.cpp  Output.h  RWG.cpp  RWG.h  RWGTree.cpp  RWGTree.h  Shape.cpp  Shape.h  ShapeMesh.cpp  (+30 more)
src/bem.dSYM/Contents/: Info.plist
src/bem.dSYM/Contents/Resources/DWARF/: bem
src/dielectric/.deps/: Al.Plo  Au.Plo  Dielectrics.Plo  Dielectrics.Tpo  Params.Tpo  SiN.Plo  Silica.Plo  SiliconCarbide.Plo  SiliconDoped.Plo
src/util/: Al.cpp  Al.h  Au.cpp  Au.h  ComplexPair.h  ComplexVector3.h  ComplexVector3Pair.h  DenseMatrix.cpp  DenseMatrix.h  Dielectric.h  Dielectrics.cpp  Dielectrics.h  Makefile.am  Makefile.in  MathUtils.cpp  MathUtils.h  MatrixBase.cpp  MatrixBase.h  MatrixOperations.cpp  MatrixOperations.h  Params.cpp  Params.h  ReferenceCountingPointer.cpp  ReferenceCountingPointer.h  Rk.cpp  Rotation.cpp  SI.cpp  SI.h  SiC.cpp  SiC.h  SiN.cpp  SiN.h  Silica.cpp  SiliconDoped.cpp  SiliconDoped.h  SparseMatrix.h  Transform.cpp  Transform.h  Util.h  Vector3.h  (+1 more)
sweeps/: sweep5um500nm.out  sweep5um500nm.out2  sweep5um500nm.out3  sweep5um500nm.out~
tetgen/: Makefile  Tetgen.cpp
