_CXXFLAGS = @BEM_CFLAGS@ -fno-show-column

lib_LTLIBRARIES = libutil.la

libutilincludedir = .
libutilinclude_HEADERS = Util.h
libutil_la_SOURCES = Silica.cpp SiC.cpp SiN.cpp SiliconDoped.cpp Al.cpp Au.cpp Dielectrics.cpp Params.cpp  ReferenceCountingPointer.cpp MathUtils.cpp DenseMatrix.cpp Transform.cpp Rotation.cpp ZRotation.cpp MatrixOperations.cpp Rk.cpp SI.cpp
